[gd_scene load_steps=9 format=2]

[ext_resource path="res://Iris' Stuff/HUD.gd" type="Script" id=1]
[ext_resource path="res://Iris' Stuff/fonts/Quicksand-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Iris' Stuff/fonts/Quicksand-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Iris' Stuff/ExamineText.gd" type="Script" id=4]
[ext_resource path="res://Blueprint Fl1.png" type="Texture" id=5]
[ext_resource path="res://Blueprint Fl2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="HUD" type="CanvasLayer"]

layer = 0
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Panel" type="Polygon2D" parent="." index="0"]

position = Vector2( -10.3099, -105 )
scale = Vector2( 1.20041, 1.1875 )
polygon = PoolVector2Array( 90, 400, 750, 400, 750, 560, 90, 560 )
uv = PoolVector2Array(  )
color = Color( 0.125, 0.0393906, 0.0131836, 0.7 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Visibility" ]

[node name="ExamineText" type="RichTextLabel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.138
margin_top = 405.625
margin_right = 740.138
margin_bottom = 505.625
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 4 )
_sections_unfolded = [ "BBCode", "Rect", "Visibility", "custom_fonts" ]

[node name="MenuButton" type="MenuButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 886.0
margin_top = -48.0
margin_right = 2198.0
margin_bottom = 788.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
icon = ExtResource( 5 )
flat = true
align = 1
items = [  ]
_sections_unfolded = [ "Margin", "Rect", "Visibility" ]

[node name="Blueprint" type="Container" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Popup", "Rect", "Visibility" ]

[node name="Panel" type="Panel" parent="Blueprint" index="0"]

modulate = Color( 1, 1, 1, 0.7 )
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1025.0
margin_bottom = 603.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Visibility", "custom_styles" ]

[node name="BlueprintImg" type="Sprite" parent="Blueprint" index="1"]

position = Vector2( 280, 290 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="BlueprintImg2" type="Sprite" parent="Blueprint" index="2"]

position = Vector2( 750, 290 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="closeButton" type="Button" parent="Blueprint" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 445.846
margin_top = 457.875
margin_right = 623.846
margin_bottom = 502.875
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Close"
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="TextTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[connection signal="closetext" from="ExamineText" to="." method="closeInteractable"]

[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]

[connection signal="pressed" from="Blueprint/closeButton" to="." method="_on_closeButton_pressed"]

[connection signal="timeout" from="TextTimer" to="ExamineText" method="_on_TextTimer_timeout"]


